Resources/Private/Less/VideoPlayer/VideoPlayerApp.less
@import "./VideoPlayer.less";

.control-bar {
    border-right: none !important;

    // These buttons are used to toggle TOC and metadata on mobile (see
    // @slub_digitalcollections). Put them to the top so they won't overlap
    // with video controls.
    .offcanvas-toggle {
        bottom: unset;
        top: 5px;
    }
}

.document-view {
    background-color: black;

    @media screen and (max-width: (@tabletLandscapeViewportWidth - 1px)) {
        top: 50px;
    }

    .tx-dlf-view {
        width: 100%;
        height: 100%;
        position: absolute;
    }

    .media-viewport {
        height: 100%;
    }
}

.sxnd-player-fatal-error {
    position: absolute;
    text-align: left;
    padding-left: 1em;
    padding-top: 1em;
}

// Chapter link in sidebar
.chapter {
    cursor: pointer;
}

.inline-icon {
    vertical-align: middle;
}

@media all and (max-width: @tabletViewportWidth) {
    .sxnd-screenshot-button,
    .sxnd-bookmark-button,
    .sxnd-help-button {
        display: none !important;
    }

    .shaka-volume-bar-container,
    .shaka-mute-button {
        display: none !important;
    }
}

.screenshot-modal {
    .body-container {
        display: grid;
        grid-template-columns: 3fr 1fr;
        column-gap: 1em;

        text-align: left;

        .screenshot-config {
            grid-column: 2;
            grid-row: 1;

            h4 {
                margin-bottom: 0.6em;
                font-size: 120%;
            }

            section {
                margin-bottom: 0.8em;

                h1 {
                    font-weight: bold;
                    font-size: 100%;
                    margin-bottom: 0.3em;
                }
            }

            .metadata-overlay label {
                padding-left: @label-padding;
            }

            .file-format-option {
                margin-left: 0.3em;
            }

            .download-link {
                margin-top: 0.2em;
            }
        }

        .snap-tip {
            display: flex;
            gap: 0.4em;

            margin-top: 2em;
            line-height: 1.25;
            color: @light-color;
        }

        canvas {
            grid-column: 1;
            grid-row: 1;

            background-color: black;
            width: 100%;
            height: auto;
        }
    }

    @media screen and (max-width: 1600px) {
        .body-container {
            grid-template-columns: 2fr 1fr;
        }
    }

    @media screen and (max-width: @desktopViewportWidth) {
        .body-container {
            grid-template-columns: 1fr 1fr;
        }
    }

    @media screen and (max-width: @phoneLandscapeViewportWidth) {
        .body-container {
            display: block;
        }

        canvas {
            display: none;
        }
    }
}

.bookmark-modal {
    text-align: left;

    .url-line {
        display: flex;

        input {
            width: 90%;
            height: 2rem;
            font-size: 1rem;
            line-height: 1rem;
            color: @base-color;
            margin-right: 4pt;
        }
    }

    .start-at {
        display: none;
        margin-top: 1em;

        label {
            padding-left: @label-padding;
        }

        &.shown {
            display: block;
        }
    }
}

.help-modal {
    .subheader {
        text-align: left;
        font-weight: bold;

        &:not(:nth-child(1)) {
            margin-top: 2em;
        }
    }

    .keybindings-table {
        td:nth-child(1) {
            width: 40%;
            text-align: right;
        }

        td:nth-child(2) {
            padding-left: 3em;
            text-align: left;
        }
    }
}

.sxnd-modal-cover {
    visibility: hidden;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: 100000;
    background-color: black;
    opacity: 0;

    &.shown {
        visibility: visible;
        opacity: 0.33;
        transition: opacity 200ms linear;
    }
}

.sxnd-modal {
    position: absolute;
    display: none;
    top: 50%;
    -ms-transform: translateY(-50%);
    transform: translateY(-50%);
    background-color: rgba(@base-color, 0.9);
    color: white;
    border-radius: 5px;
    z-index: 999999;

    padding: 2rem 1.5rem 2rem 0.6rem;
    left: 1rem;
    right: 1rem;

    @media screen and (min-width: @desktopViewportWidth) {
        padding: 3rem;
        left: 5rem;
        right: 5rem;
    }

    .kb-text {
        white-space: nowrap;
    }

    .or-sep {
        font-weight: bolder;
    }

    button {
        background-color: rgba(white, 0.8);
        border: 1px solid black;
        padding: 0.5em 1em;
        border-radius: 4px;
        font-size: 100%;
    }

    .headline-container {
        position: relative;
        padding-bottom: 1rem;

        .modal-close {
            position: absolute;
            top: 0;
            right: 0;
            cursor: pointer;
        }
    }

    .body-container {
        padding: 2rem;
        overflow-y: auto;
        // max-height is set in JS
    }

    h3 {
        font-weight: 700;
    }

    table {
        width: 100%;
        padding: 5rem 0;

        tr {
            &:not(:last-child) {
                border-bottom: 1px dotted @light-color;
            }

            &:first-child {
                border-bottom: 1px solid @light-color;
            }

            td {
                color: white;
                line-height: 2rem;

                &.legend {
                    color: @light-color;
                    font-weight: 700;
                }
            }
        }
    }
}

